@startuml
skinparam Shadowing false
skinparam DefaultFontName Arial
skinparam BackgroundColor white
skinparam ArrowColor #4B5563
skinparam ArrowFontSize 9
skinparam nodesep 110
skinparam ranksep 130

top to bottom direction
hide circle
title ERD-04 - Order, bill session, payment và refund
caption Mô tả dữ liệu order dine-in, order item, payment session, payment, invoice, cashier shift và webhook\nreceipt.
skinparam linetype ortho
skinparam entity {
  BackgroundColor white
  BorderColor #374151
}

entity "reservation_orders" as reservation_orders {
  * order_id
    reservation_id
    created_by
    updated_by
    status
}

entity "reservation_order_items" as reservation_order_items {
  * order_item_id
    order_id
    item_id
    updated_by
    status
    unit_price
    line_total
}

entity "reservation_bill_payment_sessions" as reservation_bill_payment_sessions {
  * bill_payment_session_id
    reservation_id
    order_id
    customer_user_id
    linked_payment_id
    created_by
    updated_by
    session_status
}

entity "reservation_deposit_payment_sessions" as reservation_deposit_payment_sessions {
  * deposit_payment_session_id
    reservation_id
    customer_user_id
    linked_payment_id
    created_by
    updated_by
    session_status
}

entity "payments" as payments {
  * payment_id
    reservation_id
    branch_id
    refund_of_payment_id
    created_by
    updated_by
    status
}

entity "billing_invoices" as billing_invoices {
  * billing_invoice_id
    reservation_id
    issued_by
    voided_by
    invoice_status
    subtotal_amount
    discount_amount
}

entity "cashier_shifts" as cashier_shifts {
  * cashier_shift_id
    cashier_user_id
    branch_id
    opened_by
    closed_by
    status
    opening_float_amount
    expected_cash_amount
    actual_cash_amount
    cash_discrepancy_amount
}

rectangle "Runtime Ledgers (no direct FK)" {
  entity "finance_replay_records" as finance_replay_records {
    * finance_replay_record_id
      scope
      aggregate_type
      aggregate_id
      idempotency_key
      result_type
      result_id
  }

  entity "payment_provider_webhook_receipts" as payment_provider_webhook_receipts {
    * payment_provider_webhook_receipt_id
      delivery_status
      provider_code
      provider_event_code
      provider_session_code
  }
}

entity "reservations" as reservations {
  * reservation_id
    status
    deposit_status
    deposit_paid_amount
}

entity "users" as users {
  * user_id
    role_id
    current_tier_id
    privacy_anonymized_at
    full_name
}

entity "branches" as branches {
  * branch_id
    branch_code
    currency
}

entity "menu_items" as menu_items {
  * item_id
    category_id
    code
    name
}

reservations ||--o{ reservation_deposit_payment_sessions : reservation_id
users ||--o{ reservation_deposit_payment_sessions : customer_user_id
payments |o--o| reservation_deposit_payment_sessions : linked_payment_id
users |o--o{ reservation_deposit_payment_sessions : created_by
users |o--o{ reservation_deposit_payment_sessions : updated_by
reservations ||--o{ reservation_bill_payment_sessions : reservation_id
reservation_orders |o--o{ reservation_bill_payment_sessions : order_id
users ||--o{ reservation_bill_payment_sessions : customer_user_id
payments |o--o| reservation_bill_payment_sessions : linked_payment_id
users |o--o{ reservation_bill_payment_sessions : created_by
users |o--o{ reservation_bill_payment_sessions : updated_by
menu_items ||--o{ reservation_order_items : item_id
reservation_orders ||--o{ reservation_order_items : order_id
users |o--o{ reservation_order_items : updated_by
users |o--o{ reservation_orders : created_by
reservations ||--o{ reservation_orders : reservation_id
users |o--o{ reservation_orders : updated_by
reservations ||--o| billing_invoices : reservation_id
users |o--o{ billing_invoices : issued_by
users |o--o{ billing_invoices : voided_by
branches ||--o{ cashier_shifts : branch_id
users ||--o{ cashier_shifts : cashier_user_id
users |o--o{ cashier_shifts : opened_by
users |o--o{ cashier_shifts : closed_by
branches ||--o{ payments : branch_id
users |o--o{ payments : created_by
payments |o--o{ payments : refund_of_payment_id
reservations ||--o{ payments : reservation_id
users |o--o{ payments : updated_by

branches -[hidden]right- users
users -[hidden]right- reservations
reservations -[hidden]right- payments

cashier_shifts -[hidden]right- reservation_orders
reservation_orders -[hidden]right- billing_invoices
billing_invoices -[hidden]right- reservation_deposit_payment_sessions
reservation_deposit_payment_sessions -[hidden]right- reservation_bill_payment_sessions

menu_items -[hidden]right- reservation_order_items

branches -[hidden]down- cashier_shifts
users -[hidden]down- reservation_orders
reservations -[hidden]down- billing_invoices
payments -[hidden]down- reservation_deposit_payment_sessions
reservation_orders -[hidden]down- reservation_order_items

finance_replay_records -[hidden]right- payment_provider_webhook_receipts
reservation_bill_payment_sessions -[hidden]down- finance_replay_records
@enduml





